# idhea-trial-matching

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: condition_membership.json  criteria_mappings.json  criterion_catalog.json  eligibility_text.json  enrichment_models.json  idhea_dataset_metadata.json  idhea_fields.json  not_evaluable_fields.json  review_overrides.json  trials.json
scripts/: compute_coverage.py  export_csv.py  extract_trial_rules.py  extract_trial_rules_llm.py  fetch_idhea_metadata.py  fetch_trials.py  generate_all.py  generate_docx.py  generate_markdown.py  generate_metrics.py  generate_pptx.py  generate_xlsx.py  llm_client.py  load_data.py  pipeline_utils.py  validate.py
tests/: test_compute_coverage.py  test_csv_exports.py  test_diff_trials.py  test_fetch_idhea_metadata.py  test_fetch_trials.py  test_llm_client.py  test_llm_extraction.py  test_rule_extraction.py
