[project]
name = "idhea-trial-matching"
version = "0.1.0"
description = "iDHEA clinical trial pre-screening and feasibility pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
