[project]
name = "idhea-trial-matching"
version = "0.1.0"
description = "iDHEA clinical trial pre-screening and feasibility pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
exclude = [".claude", "scripts/generate_gtm_deck.py", "scripts/generate_gtm_readout.py"]
